# ydu-202-searchapp

./: .gitignore  .pdm.toml  CHANGELOG.md  README.md  Taskfile.yml  pyproject.toml  req.txt  sample_di_nb2.py
_cicd/: build.pipe.groovy
calculator_engine/: calculator_statefull.py  calculator_stateless.py
docs/lesson1/: s1.client-server.intro.md
searchup/: sup_cli.py
searchup/apps/: chat_ui.py  sample_ui.py  second_ui.py
searchup/blocks/djfedos_db/: CollectionsManager.py  collections_manager.py  fapi_server.py  lib_search_sdk.py  suggestions_ui.py  test_CollectionsManager.py  test_collections_maneger.py  test_lib_search_sdk.py  test_lib_search_sdk_custom_set.py  test_web_server_tokens.py
searchup/blocks/djfedos_db/tests/: 1200_tokens.txt  tokens.txt
searchup/blocks/vit_db/: creat_db.py  create_table.py  parser_start.py
searchup/blocks/vit_db/play_db/: connect_db.py  create_all_tables.py  fill_genre_table.py  join_db.py
searchup/core/: search_db_facade.py
tests/units/: test_searchdb_selector.py  test_sup_cli_basic.py
tutorials/p0__calculator_engine/: calculator_statefull.py  calculator_stateless.py
tutorials/p2__client_server_app/e1_file_system_communication/: com1.txt  fs_sample.py
tutorials/p2__client_server_app/e2_socket_communication/: soc_server.py
tutorials/p2__client_server_app/e3_http_socket/: fapi_server.py
version/: project_name.txt
ydusearch/http_com/: lib_search_sdk.py
ydusearch/soc_com/: soc_client.py
ydusearch/tut/p1e3_http_com/: 2466_tokens.txt
