[project]
name = "searchup"
version = "0.1.0"
description = ""
authors = [
    {name = "yairdardev", email = "yairvdar@gmail.com"},
]
license-expression = "MIT"
dependencies = []
requires-python = ">=3.8"

[project.urls]
Homepage = ""

[tool.pdm]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
