[project]
name = "searchup"
version = "0.1.1"
description = ""
authors = [
    {name = "yairdardev", email = "yairdardev@yairdar.com"},
]
license-expression = "MIT"
dependencies = [
    "fastapi>=0.75.1",
    "typer>=0.4.1",
]
requires-python = ">=3.8"

[project.urls]
Homepage = ""

[project.optional-dependencies]
testing = [
    "pytest>=7.1.1",
]
[tool.pdm]
[tool.pdm.dev-dependencies]

[build-system]
requires = ["pdm-pep517>=0.12.0"]
build-backend = "pdm.pep517.api"
